# yaar

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  rustfmt.toml  testing.rs
.cargo/: config.toml
benches/: executors.rs  prelude.rs  qsort.rs  sync_mutex.rs
examples/: hello.rs  tokio_http.rs  yaar_http.rs  yaar_qsort.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/http/: yaar.rs
examples/http_tcp/: tokio.rs  yaar.rs
examples/qsort/: rayon.rs  tokio.rs  yaar.rs
src/: addr_of.rs  event.rs  io.rs  lib.rs  macros.rs  net.rs  task.rs  waker.rs
src/dependencies/: crossbeam_deque.rs  mod.rs  parking_lot.rs  pin_utils.rs  try_lock.rs
src/executor/: mod.rs  node.rs  pool.rs  queue.rs  task.rs  thread.rs  worker.rs
src/internal/: event.rs  lock.rs  mod.rs  time.rs  waker.rs
src/internals/: container_of.rs  waker.rs
src/io/: driver.rs  fairness.rs  mod.rs  pollable.rs  waker.rs  wakers.rs
src/lock/: mod.rs  mutex.rs
src/lock/event/: linux.rs  mod.rs  posix.rs  windows.rs
src/net/: mod.rs  source.rs  tcp.rs
src/net/internal/: mod.rs  pollable.rs  poller.rs  wakers.rs
src/net/tcp/: listener.rs  mod.rs  split.rs  split_owned.rs  stream.rs
src/reactor/: mod.rs
src/rt/: idle.rs  io.rs  mod.rs  pool.rs  queue.rs  task.rs
src/runtime/: builder.rs  config.rs  context.rs  coop.rs  enter.rs  executor.rs  handle.rs  handler.rs  idle.rs  io.rs  mod.rs  parker.rs  pool.rs  queue.rs  rand.rs  random.rs  runtime.rs  serial.rs  task.rs  thread.rs  waker.rs  worker.rs
src/runtime/executor/: mod.rs  serial.rs  task.rs
src/runtime/internal/: context.rs  executor.rs  mod.rs  parker.rs  poller.rs  random.rs  task.rs  thread_pool.rs  worker.rs
src/runtime/platform/: mod.rs
src/runtime/platform/windows/: mod.rs
src/runtime/scheduler/: config.rs  context.rs  executor.rs  mod.rs  parker.rs  pool.rs  queue.rs  random.rs  task.rs  thread.rs  thread_pool.rs  worker.rs
src/runtime/serial/: mod.rs
src/runtime/utils/: cache_padded.rs  lazy.rs  mod.rs
src/sync/: atomic.rs  cache_padded.rs  concurrency.rs  mod.rs  mpsc.rs  mutex.rs  wait_node.rs  waker.rs
src/sync/future/: mod.rs  mutex.rs
src/sync/low_level/: event.rs  lock.rs  mod.rs  once.rs  spin.rs  thread_local.rs  wait_queue.rs  waker.rs
src/sync/mpsc/: unbounded.rs  unbounded2.rs
src/sync/parker/: block_on.rs  mod.rs  std_parker.rs
src/sync/parker/os/: darwin.rs  mod.rs  windows.rs
src/sync/parking_lot/: atomic_waker.rs  lock.rs  mod.rs  parking_lot.rs  queue.rs
src/sync/primitives/: condvar.rs  mod.rs  mutex.rs
src/sync/thread_event/: linux.rs  mod.rs  posix.rs  windows.rs
src/task/: join_handle.rs  mod.rs
src/time/: error.rs  intervals.rs  mod.rs  queue.rs  sleeps.rs  timeouts.rs
src/time/internal/: mod.rs  queue.rs  shared_u64.rs
tests/: executor_task.rs
yaar/: Cargo.toml  LICENSE-MIT  README.md
yaar-io/: Cargo.toml
yaar-lock/: Cargo.toml  README.md
yaar-lock/.cargo/: config.toml
yaar-lock/benches/: Cargo.toml  async_mutex.rs  sync_mutex.rs
yaar-lock/benches/async/: mutex.rs
yaar-lock/benches/sync/: mutex.rs  prot_lock.rs  rwlock.rs  std_lock.rs
yaar-lock/benches/sync_mutexes/: mod.rs  nt_lock.rs  os_lock.rs  spin_lock.rs  std_lock.rs  sys_lock.rs  yaar_sync_lock.rs  yield_lock.rs
yaar-lock/src/: lib.rs  mutex.rs  signal.rs
yaar-lock/src/core/: lock.rs  mod.rs  parker.rs
yaar-lock/src/event/: linux.rs  mod.rs  posix.rs  windows.rs
yaar-lock/src/event/time/: mod.rs  monotonic.rs  posix.rs  windows.rs
yaar-lock/src/future/: mod.rs  mutex.rs  reset_event.rs  wait_node.rs
yaar-lock/src/futures/: mod.rs  mutex.rs
yaar-lock/src/mutex/: futures.rs  mod.rs  sync.rs
yaar-lock/src/parker/: lock.rs  mod.rs  parker.rs
yaar-lock/src/parker/event/: mod.rs  windows.rs
yaar-lock/src/shared/: event.rs  lock.rs  mod.rs  mutex.rs  parker.rs  waiter.rs
yaar-lock/src/signal/: linux.rs  mod.rs  windows.rs
yaar-lock/src/sync/: event.rs  lock.rs  mod.rs  mutex.rs  parker.rs  raw_mutex.rs  reset_event.rs  rwlock.rs  spin_wait.rs  wait_node.rs
yaar-lock/src/sync/thread_parker/: linux.rs  mod.rs  posix.rs  windows.rs
yaar-lock/src/thread_event/: linux.rs  mod.rs  posix.rs  windows.rs
yaar-lock/src/thread_parker/: linux.rs  mod.rs  posix.rs  windows.rs
yaar-lock/src/utils/: cache_padded.rs  mod.rs  unsync.rs  unwrap_unchecked.rs
yaar-net/: Cargo.toml
yaar-reactor/: Cargo.toml  README.md
yaar-reactor/src/: lib.rs
yaar-runtime/: Cargo.toml
yaar-runtime/examples/hello/src/: main.rs
yaar-runtime/src/: lib.rs
yaar-runtime/src/runtime/: task.rs
yaar-runtime/src/runtime/executor/: mod.rs
yaar-sys/: Cargo.toml
yaar-sys/src/: lib.rs  windows.rs
yaar-time/: Cargo.toml
yaar-time/src/: lib.rs
yaar-waker/: Cargo.toml
yaar-waker/src/: lib.rs
yaar/examples/hello/: Cargo.toml
yaar/examples/hello/src/: main.rs
yaar/old/executor/: mod.rs  scheduler.rs  worker.rs
yaar/old/executor/task/: header.rs  mod.rs
yaar/src/: lib.rs  task.rs
yaar/src/core/: mod.rs  node.rs  scheduler.rs  worker.rs
yaar/src/core/task/: future.rs  mod.rs
yaar/src/core/task/list/: buffer.rs  mod.rs  queue.rs
yaar/src/executor/: list.rs  mod.rs  node.rs  platform.rs  ptr.rs  queue.rs  scheduler.rs  serial.rs  task.rs  thread.rs  worker.rs
yaar/src/executor/list/: global.rs  local.rs  mod.rs
yaar/src/executor/task/: event.rs  future.rs  join_handle.rs  mod.rs  waker.rs
yaar/src/runtime/: executor.rs  future.rs  mod.rs  platform.rs  task.rs
yaar/src/runtime/executor/: mod.rs  node.rs  scheduler.rs
yaar/src/runtime/platform/: mod.rs
yaar/src/runtime/task/: future.rs  list.rs  mod.rs  queue.rs
yaar/src/runtime/time/: mod.rs
yaar/src/util/: cache_padded.rs  mod.rs
