[package]
name = "yaar"
license = "MIT"
version = "0.5.0"
edition = "2021"

[dependencies]
num_cpus = "1"
once_cell = "1"
try-lock = "0.2"
pin-utils = "0.1"
crossbeam-deque = "0.8"

[dev-dependencies]
pin-project-lite = "0.2"
criterion = { version = "0.3", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[[bench]]
name = "executors"
harness = false