[package]
name = "yaar-lock"
version = "0.3.0"
authors = ["kprotty"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/tree/master/yaar-lock"
categories = ["concurrency", "no-std", "data-structures"]
keywords = ["no-std", "thread", "mutex"]
description = """
Fast, no_std synchronization primitives.
"""

[features]
default = []
nightly = []
full = ["os", "sync", "future"]

# Main features for yaar-lock
os = ["yaar-sys"]
sync = []
future = []

[dependencies]
yaar-sys = { path = "../yaar-sys", optional = true }

[package.metadata.docs.rs]
features = ["full", "nightly"]

[package.metadata.playground]
features = ["full"]
