[package]
name = "yaar-lock"
version = "0.3.0"
authors = ["kprotty"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/tree/master/yaar-lock"
categories = ["concurrency", "no-std", "data-structures"]
keywords = ["no-std", "thread", "mutex"]
description = """
Fast, no_std synchronization primitives.
"""

[features]
default = []
nightly = []
full = ["os", "sync", "future", "lock_api"]

# Main features for yaar-lock
os = ["yaar-sys"]
sync = []
future = []

[dependencies]
lock_api = { version = "0.3", optional = true }
yaar-sys = { path = "../yaar-sys", optional = true }

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.11"
parking_lot = "0.10"

[[bench]]
name = "sync_mutex"
harness = false

[package.metadata.docs.rs]
features = ["full", "nightly"]

[package.metadata.playground]
features = ["full"]
