[package]
name = "yaar-reactor"
version = "0.1.2-alpha.1"
authors = ["kprotty"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/tree/master/yaar-reactor"
categories = ["asynchronous", "network-programming", "no-std"]
keywords = ["io", "async", "await", "non-blocking", "futures"]
description = """
Non-blocking IO abstractions for building executors. 
"""

[features]
default = ["os"]
os = ["libc", "winapi"]

[target.'cfg(unix)'.dependencies.libc]
optional = true
version = "0.2"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
optional = true
version = "0.3"
default-features = false
features = []
