[package]
name = "yaar-reactor"
version = "0.2.0"
authors = ["kprotty"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/tree/master/yaar-reactor"
categories = ["asynchronous", "network-programming", "no-std"]
keywords = ["io", "async", "await", "non-blocking", "futures", "no-std"]
description = """
Non-blocking IO abstractions for futures.
"""

[features]
default = ["os"]
os = ["libc", "winapi"]

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true