[package]
name = "yaar"
version = "0.1.0"
authors = ["kprotty"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/kprotty/yaar"
categories = ["asynchronous", "concurrency", "network-programming", "no-std"]
keywords = ["io", "async", "await", "non-blocking", "futures", "no-std", "thread", "mutex"]
description = """
Yet another asynchronous runtime 
optimized around configuration and no_std.
"""

[features]
default = []
alloc = []
lock = ["lock_api"]
os = ["libc", "winapi"]
rt = []
rt-serial = ["rt"]

[dependencies.lock_api]
optional = true
version = "0.3"

[target.'cfg(unix)'.dependencies.libc]
optional = true
version = "0.2"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
optional = true
version = "0.3"
default-features = false
features = []
