[package]
name = "yaar"
version = "0.1.1-alpha.1"
authors = ["kprotty"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/tree/master/yaar"
categories = ["asynchronous", "concurrency", "no-std"]
keywords = ["async", "await", "non-blocking", "futures", "no-std"]
description = """
Yet another asynchronous runtime 
optimized around configuration and no_std.
"""

[features]
default = ["os"]
os = ["libc", "winapi", "yaar-lock/os"]
io = []
time = []

[dependencies.yaar-lock]
path = "../yaar-lock"
default-features = false
features = ["sync", "futures"]

[target.'cfg(unix)'.dependencies.libc]
optional = true
version = "0.2"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
optional = true
version = "0.3"
default-features = false
features = []
