[package]
name = "yaar"
version = "0.2.0"
authors = ["kprotty"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kprotty/yaar/"
categories = ["network-programming", "asynchronous", "concurrency", "no-std"]
keywords = ["io", "async", "await", "non-blocking", "futures", "no-std", "thread", "mutex"]
description = """
Yet another asynchronous runtime 
optimized around configuration and no_std.
"""

[features]
default = []
nightly = []
full = []

[dependencies]
lock_api = "0.3"
yaar-lock = { path = "../yaar-lock" }
yaar-sys = { path = "../yaar-sys", optional = true }
yaar-reactor = { path = "../yaar-reactor", optional = true }

[package.metadata.playground]
features = ["full"]

[package.metadata.docs.rs]
all-features = true

