[package]
name = "yaar_lock-bench"
version = "0.0.0"
edition = "2018"
authors = ["kprotty"]

[features]
sync_mutex = ["sync"]
sync = [
    "yaar-lock/sync",
    "parking_lot",
    "crossbeam-utils"
]

async_mutex = ["async", "tokio/sync"]
async = [
    "criterion",
    "futures-intrusive",
    "yaar-lock/future",
    "tokio/rt-threaded",
]

[dependencies]
yaar-lock = { path = "../", features = ["os"] }
futures-intrusive = { version = "0.3", optional = true }
criterion = { version = "0.3", optional = true }
crossbeam-utils = { version = "0.7", optional = true }
parking_lot = { version = "0.10", optional = true }
tokio = { version = "0.2", optional = true }
num_cpus = "1.11"

[[bench]]
name = "async_mutex"
path = "./async/mutex.rs"
harness = false
required-features = ["async_mutex"]

[[bin]]
name = "sync_mutex"
path = "./sync/mutex.rs"
required-features = ["sync_mutex"]
