[package]
name = "yaar_lock-bench"
version = "0.0.0"
edition = "2018"
authors = ["kprotty"]

[features]
mutex = ["sync", "libc"]
sync = ["yaar-lock", "parking_lot"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[dependencies]
num_cpus = "1.11"
parking_lot = { version = "0.10", optional = true }
yaar-lock = { path = "../", features = ["full"], optional = true }

[[bin]]
name = "mutex"
path = "./mutex.rs"
required-features = ["mutex"]
